docs: 补充剩余接口的Swagger文档
